# 5bot

./: Cargo.toml  README.md
migrations/: 20210920140555_initial.up.sql
slash_command_macro/src/: command.rs
src/: context.rs  error.rs  logging.rs  main.rs
src/commands/: mod.rs
src/commands/message/: activity.rs  complete.rs  impersonate.rs  mod.rs
src/commands/music/: clear.rs  mod.rs  pause.rs  play.rs  queue.rs  skip.rs  stop.rs  tts.rs  volume.rs
src/commands/osu/: mod.rs  suijisim.rs
src/commands/utils/: roll.rs
src/core/context/: mod.rs
src/database/methods/: messages.rs
src/utils/: matcher.rs  mod.rs  spreadsheet.rs  uberduck.rs
src/utils/builders/: message.rs
src/utils/ext/: application_command.rs
